[package]
name = "deps_bors"
version = "0.0.1"
authors = ["Filippo Rossi", "Elias Sjögreen"]
edition = "2018"

[[bin]]
name = "bors"
path = "src/main.rs"

[dependencies]
clap = "3.0.0-beta.1"
anyhow = "1.0"
log = "0.4"
env_logger = "0.7"

reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

semver = { version = "0.10.0", features = ["serde"] }
