[package]
name = "deps"
version = "0.0.4"
license = "MIT"
authors = ["Filippo Rossi", "Elias Sjögreen"]
edition = "2018"
repository = "https://github.com/denosaurs/deps.bors"

[[bin]]
name = "bors"
path = "src/main.rs"

[dependencies]
clap = "3.0.0-beta.1"
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.8"

reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

semver = { version = "0.11.0", features = ["serde"] }
